--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,6 +2,8 @@
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
+[project.scripts]
+nauta = "nauta.cli:app"
 
 [project]
 name = "nauta"
@@ -17,6 +19,7 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = ["typer>=0.13.1"]
 
 [project.urls]
 Homepage = "https://github.com/raulodev/nauta"
