--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,7 @@ twine==5.1.1
 typer==0.13.1
 pipx==1.7.1
 appdirs==1.4.4
+requests==2.32.3
 
 # pipx install . --force
+# pipx run --spec . nauta --help
