--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ appdirs==1.4.4
 requests==2.32.3
 beautifulsoup4==4.12.3
 apscheduler==3.11.0
+urllib3==1.26.18
 
 # pipx install . --force
 # pipx run --spec . nauta --help
